--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -8,9 +8,10 @@
   --xxx: #ddd;
   --uiblue: #2133d6;
   --uilblue: #00e0ff;
+  --uilblueglow: #00e1ff7a;
   --uired: #ff8181;
   --red: #885f65;
   --red1: #5b3c40;
-  --red1bg: #5b3c1a38;
+  --red1bg: #5b1a1a1e;
   --red2bg: #5b3c407c;
 }
